--- a/Styles/global.css
+++ b/Styles/global.css
@@ -3,3 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+:root{
+    --brand-color: #EF5F4C;
+    --background-color: #FFFFFF;
+    --surface-color: #F5F5F5;
+    --skeleton-color: #D9D9D9;
+    --shape-transparency: hsl(#ffffff, 100% , 56%);
+    --text-color-primary: #313131;
+    --text-color-secundary: #6c6c6c8f;
+}
