--- a/Styles/global.css
+++ b/Styles/global.css
@@ -12,4 +12,9 @@
     --shape-transparency: hsl(#ffffff, 100% , 56%);
     --text-color-primary: #313131;
     --text-color-secundary: #6c6c6c8f;
+--font-family: "Poppins", sans-serif;
+    --text-lg: bold 32px/125% var(--font-family);
+    --text-md: 14px/170% var(--font-family);
+    --text-sm: 12px/170% var(--font-family);
+    --text: 16px/150% var(--font-family);
 }
