--- a/Styles/global.css
+++ b/Styles/global.css
@@ -18,3 +18,29 @@
     --text-sm: 12px/170% var(--font-family);
     --text: 16px/150% var(--font-family);
 }
+
+body{
+    font: var(--text);
+    color: var(--text-color-secundary);
+    background-color: var(--background-color);
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
+.container{
+    padding-inline: 32px; /*propriedade que aplica padding somente nas bordas*/
+    max-width: 1280px;
+    margin-inline: auto;
+}
+
+a:hover{
+    color: var(--brand-color);
+    text-decoration: underline;
+}
+
+.bg-surface-color{
+    background-color: var(--surface-color);
+}
